Calculate maximum height of a character built from parts when measuring. b=403559, r+sr+a=roc